--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,13 @@
-table {
+h1 {
+  text-align: center; }
+
+.table {
   width: 80%;
   margin: auto; }
+
+main .btn.btn-default {
+  display: block;
+  margin: auto;
+  padding: .5em 1em; }
 
 /*# sourceMappingURL=style.css.map */
