--- a/src/sass/content.scss
+++ b/src/sass/content.scss
@@ -1,4 +1,12 @@
-table {
+h1 {
+  text-align: center;
+}
+.table {
   width: 80%;
   margin: auto;
+}
+main .btn.btn-default {
+  display: block;
+  margin: auto;
+  padding: .5em 1em;
 }
