--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,28 @@
-h1, h2 {
-  text-align: center; }
-
-.table {
-  width: 80%;
-  margin: auto; }
+h1 {
+  text-align: center;
+  font-size: 4em; }
 
 main .btn.btn-default {
   display: block;
   margin: auto;
   padding: .5em 1em; }
+
+form input {
+  display: block; }
+form p {
+  display: inline-block; }
+
+input.ng-invalid.ng-touched {
+  border: .2em solid #ff0000; }
+
+.errorText {
+  color: #ff0000; }
+
+.table {
+  width: 80%;
+  margin: auto; }
+
+table {
+  border: 1px solid grey; }
 
 /*# sourceMappingURL=style.css.map */
