--- a/src/sass/content.scss
+++ b/src/sass/content.scss
@@ -1,12 +1,37 @@
-h1, h2 {
+h1 {
   text-align: center;
+  font-size: 4em;
 }
-.table {
-  width: 80%;
-  margin: auto;
-}
+
 main .btn.btn-default {
   display: block;
   margin: auto;
   padding: .5em 1em;
+}
+
+form {
+  input {
+    display: block;
+  }
+  p {
+    display: inline-block;
+  }
+}
+
+
+input.ng-invalid.ng-touched {
+    border: .2em solid #ff0000;
+  }
+
+.errorText {
+  color: #ff0000;
+}
+
+.table {
+  width: 80%;
+  margin: auto;
+}
+
+table {
+  border: 1px solid grey;
 }
